# FORECASTIQ

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTRUCTIVO.md  PROYECTO_FORECASTIQ.md  README.md  ROADMAP.md  TODO.md  docker-compose.prod.yml  docker-compose.spark.yml  docker-compose.yml  gitignore  package-lock.json  package.json  railway.toml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  Dockerfile.worker-local  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: batch.py  capabilities.py  chat.py  conversations.py  datasets.py  eda.py  events.py  forecast.py  health.py  me.py  metrics.py  mlops.py
backend/app/core/: config.py  dependencies.py  logging.py  middleware.py  telemetry.py
backend/app/ml/: detector.py  evaluator.py
backend/app/ml/models/: base.py  holt_model.py  holt_winters.py  lightgbm_model.py  linear_splines_model.py  moving_average.py  sarima.py  seasonal_naive.py  ses_model.py  utils.py
backend/app/services/: celery_app.py  drift_detector.py  events.py  forecast_exporter.py  mlflow_tracker.py  nixtla_forecaster.py  redis_cache.py  storage.py  supabase.py
backend/app/services/llm/: client.py  openrouter.py  tool_executor.py  tools.py
backend/migrations/: 001_forecast_jobs.sql  002_events.sql  003_add_user_id.sql  004_chat_conversations.sql  005_hpo_cache.sql  006_better_auth_schema.sql  007_events_dataset.sql
backend/tests/: conftest.py
backend/tests/unit/: test_detector.py  test_health.py
frontend/: .env.example  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/api/auth/[...all]/: route.ts
frontend/app/api/dev-logout/: route.ts
frontend/app/dashboard/: _encyclopedia_import_tmp.txt  layout.tsx  page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/dashboard/batch/: page.tsx
frontend/app/dashboard/calendar/: page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/data/: page.tsx
frontend/app/dashboard/dataset/: page.tsx
frontend/app/dashboard/datasets/: page.tsx
frontend/app/dashboard/eda/: page.tsx
frontend/app/dashboard/encyclopedia/: page.tsx
frontend/app/dashboard/etl/: page.tsx
frontend/app/dashboard/explorer/: page.tsx
frontend/app/dashboard/forecast/: page.tsx
frontend/app/dashboard/home/: page.tsx
frontend/app/dashboard/mlops/: page.tsx
frontend/app/dashboard/multi-serie/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/components/calendar/: EventCalendar.tsx  EventChip.tsx  EventForm.tsx
frontend/components/chat/: ChatBox.tsx  ConversationSidebar.tsx  FloatingChat.tsx  InlineChart.tsx  MessageBubble.tsx  ModelSelector.tsx  ModelStatusBar.tsx  QuickQuestions.tsx  RobotAvatar.tsx  StreamingCursor.tsx  WelcomeScreen.tsx
frontend/components/common/: DatasetSelector.tsx  EmptyStateGuard.tsx  PipelineBar.tsx
frontend/components/dashboard/: ActiveDatasetBar.tsx
frontend/components/dataset/: CloudDataCard.tsx  ConnectDbCard.tsx  DataSourceTabs.tsx  DemoDatasetCard.tsx  ExportButton.tsx
frontend/components/eda/: DataCompletenessBar.tsx  ModelsAvailablePanel.tsx  OutlierChart.tsx  QualityScoreCard.tsx  SeriesSummaryTable.tsx
frontend/components/encyclopedia/: ChapterSidebar.tsx  FormulaBlock.tsx  PythonCodeBlock.tsx  TryInForecastButton.tsx  WhenToUseCard.tsx
frontend/components/encyclopedia/chapters/: 01-why-forecast.tsx  02-understanding-data.tsx  03-abc-xyz.tsx  04-metrics.tsx  05-naive-moving-average.tsx  06-exponential-smoothing.tsx  07-arima-sarima.tsx  08-feature-engineering.tsx  09-lightgbm.tsx  10-cross-validation.tsx  11-fva.tsx  12-human-biases.tsx  index.ts
frontend/components/etl/: BeforeAfterChart.tsx  FillGapsPanel.tsx  WinsorizationPanel.tsx
frontend/components/forecast/: BenchmarkExportButton.tsx  BenchmarkTable.tsx  CumulativeBiasChart.tsx  CvResultsCard.tsx  DatasetPicker.tsx  DemoSkuSearchDialog.tsx  DetectionReportModal.tsx  ErrorMonthlyChart.tsx  ForecastChart.tsx  ForecastConfigPanel.tsx  ForecastContextBar.tsx  ForecastExportButton.tsx  HorizonSelector.tsx  MetricsCard.tsx  ModelGatingPanel.tsx  ParameterExplorer.tsx  SeasonalityHeatmap.tsx  YearlyTrendChart.tsx
frontend/components/home/: HomeDashboard.tsx
frontend/components/landing/: LandingPage.tsx
frontend/components/layout/: README.md
frontend/components/mlops/: DriftCard.tsx  ExperimentTable.tsx  MLflowLink.tsx  WapeTrendChart.tsx
frontend/components/ui/: AuthThemeRegistry.tsx  ThemeRegistry.tsx
frontend/components/upload/: ColumnSelector.tsx  DataPreview.tsx  DropZone.tsx  ModelRecommendation.tsx
frontend/hooks/: useCapabilities.ts  useChat.ts  useColumnPreview.ts  useConversations.ts  useDataset.ts  useEda.ts  useEtl.ts  useEvents.ts  useForecast.ts  useModelStatus.ts
frontend/lib/: api.ts  appStore.ts  auth-client.ts  auth.ts  freqDetection.ts  motion.ts  preferredModel.ts  sessionDatasets.ts  theme.ts  themePresets.ts  types.ts
frontend/public/: ForecastIQ Layout.html  landing.html  robot.json  tweaks-panel.jsx
frontend/types/: react-katex.d.ts
infra/_deprecated_railway/: railway-worker.toml
infra/alloy/: Dockerfile  config.alloy  railway.toml
infra/aws/: README.md  setup_ec2.sh
notebooks/: spark_forecast_pipeline.ipynb
scripts/: benchmark_models.py  generate_forecastiq_dataset.py  generate_massive_dataset.py  spark_benchmark.py  split_parquet.py  upload_dataset_to_supabase.py  verify_dataset_supabase.py
